# sdkwork-canvas

./: .env.example  .env.postgres.example  .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json
.sdkwork/: README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/: README.md
apps/: README.md
apps/sdkwork-canvas-pc/: AGENTS.md  README.md  index.html  metadata.json  package-lock.json  package.json  sdkwork.app.config.json  server.ts
configs/: README.md  quality-gate.yaml  sdkwork-api-cloud-gateway.canvas.development.toml  sdkwork-api-cloud-gateway.canvas.production.toml
configs/topology/: README.md  cloud.development.env  cloud.production.env  cloud.split-services.development.env  cloud.split-services.production.env  standalone.development.env  standalone.production.env  standalone.split-services.development.env  standalone.unified-process.development.env  standalone.unified-process.production.env  topology.yaml
crates/: README.md
crates/sdkwork-api-canvas-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-canvas-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-canvas-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-canvas-standalone-gateway/: Cargo.toml
crates/sdkwork-api-canvas-standalone-gateway/src/: http_route_manifest.rs  main.rs
crates/sdkwork-api-canvas-standalone-gateway/src/bootstrap/: drive_port.rs  iam_application_bootstrap.rs  mod.rs  routers.rs
crates/sdkwork-canvas-database-host/: Cargo.toml
crates/sdkwork-canvas-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-canvas-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-canvas-pages-repository-sqlx/: Cargo.toml
crates/sdkwork-canvas-pages-repository-sqlx/specs/: component.spec.json
crates/sdkwork-canvas-pages-repository-sqlx/src/: DEPRECATED.md  bootstrap.rs  canvas_store.rs  lib.rs  schema.rs  sqlite_core.sql
crates/sdkwork-canvas-pages-repository-sqlx/src/entities/: mod.rs
crates/sdkwork-canvas-pages-service/: Cargo.toml
crates/sdkwork-canvas-pages-service/specs/: README.md  component.spec.json
crates/sdkwork-canvas-pages-service/src/: domain.rs  error.rs  lib.rs  ports.rs  service.rs
crates/sdkwork-canvas-pages-service/src/infrastructure/drive/: memory_page_content.rs  mod.rs
crates/sdkwork-canvas-pages-service/tests/: page_service.rs  sqlite_schema_contract.rs
crates/sdkwork-canvas-standalone-gateway/: Cargo.toml
crates/sdkwork-routes-canvas-app-api/: Cargo.toml
crates/sdkwork-routes-canvas-app-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-canvas-app-api/src/: context.rs  dto.rs  envelope.rs  handlers.rs  http_route_manifest.rs  lib.rs  manifest.rs  paths.rs  routes.rs  state.rs  web_bootstrap.rs
crates/sdkwork-routes-canvas-app-api/tests/: app_web_framework_routes.rs  page_routes.rs  route_manifest.rs
crates/sdkwork-routes-canvas-backend-api/: Cargo.toml
crates/sdkwork-routes-canvas-http-auth/: Cargo.toml
crates/sdkwork-routes-canvas-http-auth/src/: actor_context.rs  auth.rs  layer.rs  lib.rs  permissions.rs  response.rs  test_support.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/drift/: policy.yaml
deployments/: README.md  deploy.yaml
docs/: INDEX.yaml  README.md  root-layout.md  topology-standard.md
docs/architecture/: sdkwork-specs-alignment-audit.md
docs/prompts/: 反复执行Step指令.md
docs/release/: CHANGELOG.md  README.md  Step03-认证宿主边界纠偏-2026-04-13.md  Step04-侧栏缩放运行时收敛-2026-04-07.md  Step04-写路径协调收敛-2026-04-07.md  Step04-创建文件夹写路径编排收敛-2026-04-07.md  Step04-创建笔记写路径编排收敛-2026-04-07.md  Step04-创建笔记流程收敛-2026-04-07.md  Step04-命令面板适配边界收敛-2026-04-07.md  Step04-对话框底部适配边界收敛-2026-04-07.md  Step04-对话框状态收敛-2026-04-07.md  Step04-对话框运行时收敛-2026-04-07.md  Step04-快捷键提示适配边界收敛-2026-04-07.md  Step04-快捷键运行时收敛-2026-04-07.md  Step04-移动笔记写路径编排收敛-2026-04-07.md  Step04-自动保存策略收敛-2026-04-07.md  Step04-自动保存运行时收敛-2026-04-07.md  Step04-读取策略边界收敛-2026-04-07.md  Step04-读策略注册表收敛-2026-04-07.md  Step04-重命名文件夹写路径编排收敛-2026-04-07.md  Step04-错误提示适配边界收敛-2026-04-07.md  Step04-页面Chrome收敛-2026-04-07.md  Step04-页面依赖装配收敛-2026-04-07.md  Step04-页面动作编排收敛-2026-04-07.md  Step04-页面命令执行收敛-2026-04-07.md  Step04-页面命令运行时收敛-2026-04-07.md  Step04-页面展示模型收敛-2026-04-07.md  Step04-页面洞察区组件收敛-2026-04-07.md  Step04-顶部动作适配边界收敛-2026-04-07.md  Step05-串行保存编排-2026-04-13.md  Step05-保存失败反馈与重试状态机-2026-04-07.md  Step05-保存重试退避与观测-2026-04-13.md  Step05-可见性刷盘边界收敛-2026-04-07.md  Step05-统一刷盘入口收敛-2026-04-07.md  Step05-退出恢复检查点-2026-04-13.md  Step06-启动恢复smoke-2026-04-13.md  Step06-本地Schema与迁移-2026-04-13.md  Step06-本地快照接口-2026-04-13.md  Step06-本地恢复入口-2026-04-13.md  Step07-性能与验证基线-2026-04-13.md  (+62 more)
etc/: sdkwork-api-cloud-gateway.canvas.development.toml  sdkwork-api-cloud-gateway.canvas.production.toml
examples/: README.md
jobs/: README.md
plugins/: README.md
scripts/: README.md  align-canvas-api-standard.mjs  canvas-dev.mjs  gateway-cloud-bundle.mjs  generate-canvas-app-sdk.mjs  patch-canvas-route-tests.mjs  print-gateway-package-matrix.mjs  rename-canvas-pc-packages.mjs  run-canvas-standalone-gateway.mjs  sync-canvas-api-framework-metadata.mjs  verify-canvas-contract-foundation.mjs  verify-canvas-contract-foundation.test.mjs  verify-canvas-rust-service-skeleton.test.mjs  verify-canvas-standard-architecture.test.mjs  verify-canvas-topology.test.mjs
sdks/: README.md
sdkwork-canvas-pc-react/: .env.development  .env.development.local.example  .env.example  .env.production  .env.test  .gitignore  AGENTS.md  README.md  index.html  package.json  sdkwork.app.config.json  tsconfig.base.json  vite.config.ts
services/: README.md
specs/: README.md  component.spec.json  iam.module.manifest.json  topology.spec.json
tests/: README.md
tools/: README.md  canvas_sdk_generate.mjs  gen_canvas_combined_http_route_manifest.py  gen_http_route_manifest_from_json.py  materialize_canvas_database_contract.mjs
(+865 files in other folders)
