[workspace]
members = [
    "crates/sdkwork-canvas-gateway-assembly",
    "crates/sdkwork-canvas-database-host",
    "crates/sdkwork-canvas-pages-service",
    "crates/sdkwork-canvas-pages-repository-sqlx",
    "crates/sdkwork-routes-canvas-http-auth",
    "crates/sdkwork-routes-canvas-app-api",
    "crates/sdkwork-routes-canvas-backend-api",
    "crates/sdkwork-canvas-standalone-gateway",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
http = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "any", "sqlite"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sdkwork-canvas-database-host = { path = "crates/sdkwork-canvas-database-host" }
sdkwork-canvas-pages-service = { path = "crates/sdkwork-canvas-pages-service" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
sdkwork-canvas-pages-repository-sqlx = { path = "crates/sdkwork-canvas-pages-repository-sqlx" }
sdkwork-routes-canvas-http-auth = { path = "crates/sdkwork-routes-canvas-http-auth" }
sdkwork-routes-canvas-app-api = { path = "crates/sdkwork-routes-canvas-app-api" }
sdkwork-routes-canvas-backend-api = { path = "crates/sdkwork-routes-canvas-backend-api" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork_iam_web_adapter = { package = "sdkwork-iam-web-adapter", path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork_iam_embedded_application_bootstrap = { package = "sdkwork-iam-embedded-application-bootstrap", path = "../sdkwork-iam/crates/sdkwork-iam-embedded-application-bootstrap" }
sdkwork_iam_database_host = { package = "sdkwork-iam-database-host", path = "../sdkwork-iam/crates/sdkwork-iam-database-host" }
sdkwork_routes_iam_app_api = { package = "sdkwork-routes-iam-app-api", path = "../sdkwork-iam/crates/sdkwork-routes-iam-app-api" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork-database-repository = { path = "../sdkwork-database/crates/sdkwork-database-repository", package = "sdkwork-database-repository" }
sdkwork_drive_app_sdk_generated_rust = { package = "sdkwork-drive-app-sdk-generated-rust", path = "../sdkwork-drive/sdks/sdkwork-drive-app-sdk/sdkwork-drive-app-sdk-rust/generated/server-openapi" }
