[workspace]
members = [
    "crates/sdkwork-api-canvas-assembly",
    "crates/sdkwork-api-canvas-assembly",
    "crates/sdkwork-canvas-database-host",
    "crates/sdkwork-canvas-pages-service",
    "crates/sdkwork-canvas-pages-repository-sqlx",
    "crates/sdkwork-routes-canvas-http-auth",
    "crates/sdkwork-routes-canvas-app-api",
    "crates/sdkwork-routes-canvas-backend-api",
    "crates/sdkwork-api-canvas-standalone-gateway",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
http = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "any", "sqlite", "postgres"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"

sdkwork-canvas-database-host = { path = "crates/sdkwork-canvas-database-host" }
sdkwork-api-canvas-assembly = { path = "crates/sdkwork-api-canvas-assembly" }
sdkwork-canvas-pages-service = { path = "crates/sdkwork-canvas-pages-service" }
sdkwork-canvas-pages-repository-sqlx = { path = "crates/sdkwork-canvas-pages-repository-sqlx" }
sdkwork-routes-canvas-http-auth = { path = "crates/sdkwork-routes-canvas-http-auth" }
sdkwork-routes-canvas-app-api = { path = "crates/sdkwork-routes-canvas-app-api" }
sdkwork-routes-canvas-backend-api = { path = "crates/sdkwork-routes-canvas-backend-api" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }

sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }

sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-repository = { path = "../sdkwork-database/crates/sdkwork-database-repository" }

sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-iam-embedded-application-bootstrap = { path = "../sdkwork-iam/crates/sdkwork-iam-embedded-application-bootstrap" }
sdkwork-iam-database-host = { path = "../sdkwork-iam/crates/sdkwork-iam-database-host" }
sdkwork-routes-iam-app-api = { path = "../sdkwork-iam/crates/sdkwork-routes-iam-app-api" }

sdkwork-drive-app-sdk-generated-rust = { path = "../sdkwork-drive/sdks/sdkwork-drive-app-sdk/sdkwork-drive-app-sdk-rust/generated/server-openapi" }
sdkwork-drive-contract = { path = "../sdkwork-drive/crates/sdkwork-drive-contract" }
sdkwork-drive-uploader-service = { path = "../sdkwork-drive/crates/sdkwork-drive-uploader-service" }

# sdkwork-discovery and sdkwork-rpc-framework deferred until cross-process gRPC (ADR-0002).

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
