[package]
name = "sdkwork-api-canvas-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-canvas application HTTP plane."

[lib]
name = "sdkwork_api_canvas_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-canvas-pages-service.workspace = true
sdkwork-routes-canvas-http-auth.workspace = true
sdkwork-routes-canvas-app-api.workspace = true
sdkwork-routes-canvas-backend-api.workspace = true
