[package]
name = "sdkwork-api-canvas-standalone-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sdkwork-api-canvas-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork_api_canvas_assembly = { package = "sdkwork-api-canvas-assembly", path = "../sdkwork-api-canvas-assembly" }
axum.workspace = true
tokio.workspace = true
serde_json.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
async-trait.workspace = true
sdkwork-canvas-pages-service.workspace = true
sdkwork-canvas-pages-repository-sqlx.workspace = true
sdkwork-web-core.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-bootstrap.workspace = true
sdkwork_iam_web_adapter.workspace = true
sdkwork_iam_embedded_application_bootstrap.workspace = true
sdkwork_iam_database_host.workspace = true
sdkwork_routes_iam_app_api = { workspace = true }
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork_drive_app_sdk_generated_rust.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"

