[package]
name = "sdkwork-canvas-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-canvas application HTTP plane."

[lib]
name = "sdkwork_canvas_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork-canvas-pages-service.workspace = true
sdkwork_routes_canvas_app_api = { package = "sdkwork-routes-canvas-app-api", path = "../sdkwork-routes-canvas-app-api" }
sdkwork_routes_canvas_backend_api = { package = "sdkwork-routes-canvas-backend-api", path = "../sdkwork-routes-canvas-backend-api" }
sdkwork_routes_canvas_http_auth = { package = "sdkwork-routes-canvas-http-auth", path = "../sdkwork-routes-canvas-http-auth" }
