[package]
name = "sdkwork-canvas-pages-service"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
sdkwork-utils-rust.workspace = true

[dev-dependencies]
sdkwork-canvas-pages-repository-sqlx.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
